--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Random Album Art</title>
+    <title>Random Album Art - About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -32,8 +32,8 @@
           <a class="brand" href="/">Random Album Art</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="/">Home</a></li>
-              <li><a href="/about.html">About</a></li>
+              <li><a href="/">Home</a></li>
+              <li class="active"><a href="/about.html">About</a></li>
               <li><a href="/credits.html">Credits</a></li>
             </ul>
           </div><!--/.nav-collapse -->
@@ -42,20 +42,33 @@
     </div>
 
     <div class="container">
-      <section id="main">
+      <section id="about">
 	<div class="row-fluid">
 	  <div class="span6">
 	    <div class="row">
-	      <canvas id="album-canvas" width="560" height="560"></canvas>
-	    </div>
-	    <div class="row controls">
-	      <a class="btn btn-primary" id="btn-reload" href="#">Show me another ↻</a>
+	      <h2>
+		About
+	      </h2>
+	      <p> This is inspired from <a href="http://www.morrissey-solo.com/archive/index.php/t-96927.html">this discussion</a>. </p>
+	      <p>
+		I made some changes, and instead of what that thread described, this Album Generator uses the following:
+		<ul>
+		  <li>
+		    <strong>Cover Image </strong> Random image from Flickr's <a href="http://www.flickr.com/explore/interesting/">Interestingness</a> page.
+		  </li>
+		  <li>
+		    <strong>Band name </strong> Title of a random Wikipedia article.
+		  </li>
+		  <li>
+		    <strong>Album name </strong> Last 5 or 6 words of a random quote from <a href="https://en.wikiquote.org/">Wikiquotes</a>.
+		  </li>
+		</ul>
+	      </p>
 	    </div>
 	  </div>
 	</div>
       </section>
-
-     <div class="row-fluid">
+      <div class="row-fluid">
 	<div id="footer">
           <p class="muted credit">Created by <a href="http://sdqali.in">Sadique Ali</a>.</p>
 	</div>
@@ -64,7 +77,7 @@
 
 
     <link href="app.css" rel="stylesheet">
-    <script src="app.js"> </script>
+    <script src="jquery-1.10.2.min.js"> </script>
     <script src="bootstrap/js/bootstrap.js"> </script>
   </body>
 </html>
