--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 	    </div>
 	    <div class="row controls">
 	      <a class="btn btn-primary" id="btn-reload" href="#">Show me another ↻</a>
+	      <span id="spinner">
+		<img src="ajax-loader.gif"> </img>
+	      </span>
 	    </div>
 	  </div>
 	</div>
@@ -61,7 +64,6 @@
 	</div>
       </div>
     </div>
-
 
     <link href="app.css" rel="stylesheet">
     <script src="app.js"> </script>
