--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 
 
     <link href="app.css" rel="stylesheet">
-    <script src="jquery-1.10.2.min.js"> </script>
+    <script src="app.js"> </script>
     <script src="bootstrap/js/bootstrap.js"> </script>
   </body>
 </html>
